--- a/config/i3/base.template
+++ b/config/i3/base.template
@@ -23,6 +23,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec google-chrome
 
 # kill focused window
 bindsym $mod+q kill
