--- a/config/i3/base.template
+++ b/config/i3/base.template
@@ -1,6 +1,7 @@
 # i3 config file (v4) - base config
 
-set $mod Mod1
+# set $mod Mod1
+set $mod Mod4
 set $win mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -34,9 +35,7 @@ bindsym $mod+q kill
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec rofi -show run 
-
-
+bindsym $mod+d exec rofi -show drun
 
 # change focus
 bindsym $mod+h focus left
@@ -63,10 +62,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+z split h
+bindsym $mod+g split h
 
 # split in vertical orientation
-bindsym $mod+Shift+z split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -87,7 +86,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+z focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -167,7 +166,8 @@ bar {
 }
 
 # This only takes effect for new windows.
-default_border pixel 7
+default_border normal 7
+
 
 # Defaults + orange indicator.
 client.focused #4c7899 #285577 #ffffff #FF6D00
@@ -179,5 +179,5 @@ exec_always --no-startup-id xset r rate 200 60
 bindsym $mod+Ctrl+l exec i3lock -c 222222
 
 # macOS like copy paste
-bindsym --release $mod+v exec "xdotool type --clearmodifiers --delay 0 -- \\"$(xsel -b -o)\\""
-bindsym --release $mod+c exec "xdotool type --clearmodifiers --delay 0 -- \\"$(xsel | xsel -b -i)\\""
+# bindsym --release $mod+v exec "xdotool type --clearmodifiers --delay 0 -- \\"$(xsel -b -o)\\""
+# bindsym --release $mod+c exec "xdotool type --clearmodifiers --delay 0 -- \\"$(xsel | xsel -b -i)\\""
